--- a/memmapper/src/Homepage.css
+++ b/memmapper/src/Homepage.css
@@ -18,7 +18,7 @@
     nav{
         display: flex;
         align-items: center;
-        justify-content: end;
+        justify-content: flex-end;
         flex-wrap: wrap; 
         position: relative;
     }
