--- a/memmapper/src/Homepage.css
+++ b/memmapper/src/Homepage.css
@@ -4,7 +4,7 @@
         box-sizing: border-box;
     }
     
-    body{
+    .homepageBody{
 
         background-image: url('./assets/polaroidCollage.png');
     }
