--- a/memmapper/src/Itinerary.css
+++ b/memmapper/src/Itinerary.css
@@ -9,24 +9,33 @@
     padding-right: 10px;
 }
 
-.containerItinerary{
-    
+.container{
     padding: 50px;
-    background-color: white;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    
-    
+.container2{
+    padding: 100px;
+}
+
+.container3{
+    padding: 50px;
+}
+
+.body-itinerary {
+    font-family: Arial, sans-serif;    
+}
+
+.text-center{
+    text-align: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 form {
-    background-color: #f9f9f9;
-    padding: 20px;
+    background-color: #ffffff;
+    padding: 5px 10px;
     border-radius: 5px;
-    max-width: 600px;
-    margin: 20px auto;
+    max-width: 800px;
+    margin: -5px auto;
 }
 
 form label {
@@ -34,7 +43,6 @@ form label {
     font-weight: bold;
     margin-top: 10px;
 }
-
 
 form input[type="text"], form input[type="date"] {
     width: 100%;
@@ -55,14 +63,14 @@ form input[type="number"] {
 }
 
 form input[type="submit"] {
-    background-color: #4CAF50;
+    background-color: #4c7aaf;
     color: white;
-    padding: 12px 20px;
+    padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
-    margin-top: 20px;
+    margin-top: 10px;
 }
 
 form input[type="submit"]:hover {
@@ -75,9 +83,32 @@ form input[type="submit"]:hover {
 
 .radio_buttons {
     display: inline-block;
-    width: 150px;
+    width: 100px;
     text-align: right;
     margin-right: 5px;
+}
+
+.black-button{
+    background-color: black;
+    color: white;
+    width: 98%;
+}
+
+.black-button1{
+    background-color: black;
+    color: white;
+    width: 100%;
+}
+
+.black-button2{
+    background-color: black;
+    color: white;
+    width: 100%;
+}
+
+.delete-button{
+    background-color: #ffb09c;
+    color: black;
 }
 
 .radio_buttons p{
